part1/Exercise1.07/LogOutput/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 3000
