part1/Exercise1.07/LogOutput/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput-ingress
  labels:
    name: logoutput-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/status"
            backend:
              service:
                name: logoutput-svc
                port:
                  number: 2345
          - pathType: Prefix
            path: "/pingpong"
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 2346
